--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^17.0.0",
 		"@rollup/plugin-node-resolve": "^11.0.0",
+		"@rollup/plugin-typescript": "^8.0.0",
+		"@testing-library/svelte": "^3.0.3",
+		"@testing-library/user-event": "^13.2.1",
+		"@tsconfig/svelte": "^2.0.0",
+		"@types/jest": "^27.0.1",
+		"jest": "^27.1.0",
 		"rollup": "^2.3.4",
 		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-livereload": "^2.0.0",
@@ -18,11 +24,11 @@
 		"rollup-plugin-terser": "^7.0.0",
 		"svelte": "^3.0.0",
 		"svelte-check": "^2.0.0",
+		"svelte-jester": "^2.1.1",
 		"svelte-preprocess": "^4.0.0",
-		"@rollup/plugin-typescript": "^8.0.0",
-		"typescript": "^4.0.0",
+		"ts-jest": "^27.0.5",
 		"tslib": "^2.0.0",
-		"@tsconfig/svelte": "^2.0.0"
+		"typescript": "^4.0.0"
 	},
 	"dependencies": {
 		"sirv-cli": "^1.0.0"
