--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
 		"build": "rollup -c",
 		"dev": "rollup -c -w",
 		"start": "sirv public --no-clear",
-		"check": "svelte-check --tsconfig ./tsconfig.json"
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"test": "jest"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^17.0.0",
 		"@rollup/plugin-node-resolve": "^11.0.0",
 		"@rollup/plugin-typescript": "^8.0.0",
+		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@testing-library/user-event": "^13.2.1",
 		"@tsconfig/svelte": "^2.0.0",
 		"@types/jest": "^27.0.1",
+		"fake-indexeddb": "^3.1.3",
 		"jest": "^27.1.0",
 		"rollup": "^2.3.4",
 		"rollup-plugin-css-only": "^3.1.0",
@@ -24,7 +27,7 @@
 		"rollup-plugin-terser": "^7.0.0",
 		"svelte": "^3.0.0",
 		"svelte-check": "^2.0.0",
-		"svelte-jester": "^2.1.1",
+		"svelte-jester": "1.8.2",
 		"svelte-preprocess": "^4.0.0",
 		"ts-jest": "^27.0.5",
 		"tslib": "^2.0.0",
